@@ -1,18 +1,18 @@
 package org.petmarket.blog.service.impl;
 
+import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.petmarket.blog.dto.posts.BlogPostRequestDto;
 import org.petmarket.blog.dto.posts.BlogPostResponseDto;
-import org.petmarket.blog.entity.BlogCategory;
-import org.petmarket.blog.entity.CommentStatus;
-import org.petmarket.blog.entity.Post;
-import org.petmarket.blog.entity.PostTranslations;
+import org.petmarket.blog.dto.posts.BlogPostTranslationRequestDto;
+import org.petmarket.blog.entity.*;
 import org.petmarket.blog.mapper.BlogPostMapper;
 import org.petmarket.blog.repository.PostRepository;
 import org.petmarket.blog.service.CategoryService;
 import org.petmarket.blog.service.PostService;
 import org.petmarket.errorhandling.ItemNotFoundException;
 import org.petmarket.errorhandling.ItemNotUpdatedException;
+import org.petmarket.language.entity.Language;
 import org.petmarket.language.service.LanguageService;
 import org.petmarket.options.service.OptionsService;
 import org.petmarket.users.service.UserService;
@@ -20,9 +20,9 @@ import org.petmarket.utils.TransliterateUtils;
 import org.springframework.data.domain.Pageable;
 import org.springframework.security.core.Authentication;
 import org.springframework.stereotype.Service;
+
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -36,6 +36,7 @@ public class PostServiceImpl implements PostService {
     private final LanguageService languageService;
     private final TransliterateUtils transliterateUtils;
 
+    @Transactional
     @Override
     public BlogPostResponseDto get(Long id, String langCode) {
         Post post = findById(id);
@@ -43,7 +44,7 @@ public class PostServiceImpl implements PostService {
         post.setTranslations(getTranslation(id, langCode));
         post.setComments(post.getComments().stream()
                 .filter(comment -> comment.getStatus().equals(CommentStatus.APPROVED))
-                .collect(Collectors.toList()));
+                .toList());
         return postMapper.toDto(post);
     }
 
@@ -55,22 +56,24 @@ public class PostServiceImpl implements PostService {
                 .toList();
     }
 
+    @Transactional
     @Override
     public void delete(Long id) {
         postRepository.deleteById(id);
     }
 
+    @Transactional
     @Override
     public BlogPostResponseDto updateById(Long id, String langCode, BlogPostRequestDto requestDto) {
         Post post = findById(id);
-        post.getTranslations().stream()
-                .filter(translation -> translation.getLangCode().equals(checkedLang(langCode)))
-                .peek(translation -> {
-                    translation.setTitle(requestDto.getTitle());
-                    translation.setText(requestDto.getText());
-                    translation.setShortText(truncateStringTo500Characters(requestDto.getText()));
-                })
-                .toList();
+        for (PostTranslations translation : post.getTranslations()) {
+            if (translation.getLanguage().getLangCode().equals(checkedLang(langCode))) {
+                translation.setTitle(requestDto.getTitle());
+                translation.setText(requestDto.getText());
+                translation.setShortText(truncateStringTo500Characters(requestDto.getText()));
+            }
+        }
+        postRepository.save(post);
         return postMapper.toDto(post);
     }
 
@@ -81,6 +84,7 @@ public class PostServiceImpl implements PostService {
         );
     }
 
+    @Transactional
     @Override
     public BlogPostResponseDto savePost(BlogPostRequestDto requestDto,
                                         Authentication authentication) {
@@ -89,16 +93,26 @@ public class PostServiceImpl implements PostService {
         return postMapper.toDto(post);
     }
 
+    @Transactional
     @Override
-    public BlogPostResponseDto addTranslation(Long postId, String langCode, BlogPostRequestDto requestDto) {
+    public BlogPostResponseDto addTranslation(Long postId,
+                                              String langCode,
+                                              BlogPostTranslationRequestDto requestDto) {
         Post post = findById(postId);
         List<PostTranslations> translations = post.getTranslations();
         if (translations.stream()
-                .anyMatch(t -> t.getLangCode()
+                .anyMatch(t -> t.getLanguage().getLangCode()
                         .equals(checkedLang(langCode)))) {
-            throw new ItemNotUpdatedException(langCode + " translation is already exist");
+            throw new ItemNotUpdatedException(langCode + " translation already exist");
         } else {
-            translations.add(createPostTranslation(post, requestDto, langCode));
+            PostTranslations translation = PostTranslations.builder()
+                    .post(post)
+                    .title(requestDto.getTitle())
+                    .text(requestDto.getText())
+                    .language(languageService.getByLangCode(langCode))
+                    .shortText(truncateStringTo500Characters(requestDto.getText()))
+                    .build();
+            translations.add(translation);
             post.setTranslations(translations);
             postRepository.save(post);
         }
@@ -106,26 +120,30 @@ public class PostServiceImpl implements PostService {
     }
 
     @Override
-    public List<BlogPostResponseDto> getAllByCategory(String langCode, Long categoryId) {
+    public List<BlogPostResponseDto> getAllByCategory(String langCode,
+                                                      Long categoryId,
+                                                      Pageable pageable) {
         List<Post> allPosts;
         if (categoryId != null) {
-            allPosts = findAllByBlogCategoryId(categoryId);
+            allPosts = findAllByBlogCategoryId(categoryId, pageable);
         } else {
-            allPosts = postRepository.findAll();
+            allPosts = postRepository.findAll(pageable).getContent();
         }
         return allPosts.stream()
                 .filter(post -> post.getStatus().equals(Post.Status.PUBLISHED))
-                .peek(post -> {
+                .map(post -> {
                     post.setCategories(getFilteredCategories(post, langCode));
                     post.setComments(post.getComments().stream()
                             .filter(blogComment -> blogComment.getStatus().equals(CommentStatus.APPROVED))
-                            .collect(Collectors.toList()));
+                            .toList());
                     post.setTranslations(getTranslation(post.getId(), langCode));
+                    return post;
                 })
                 .map(postMapper::toDto)
                 .toList();
     }
 
+    @Transactional
     @Override
     public BlogPostResponseDto updateStatus(Long postId, Post.Status status) {
         Post post = findById(postId);
@@ -134,6 +152,7 @@ public class PostServiceImpl implements PostService {
         return postMapper.toDto(post);
     }
 
+    @Transactional
     @Override
     public BlogPostResponseDto save(BlogPostRequestDto requestDto) {
         return null;
@@ -147,14 +166,14 @@ public class PostServiceImpl implements PostService {
         }
     }
 
-    private PostTranslations createPostTranslation(Post post, BlogPostRequestDto requestDto, String langCode) {
-        PostTranslations translation = new PostTranslations();
-        translation.setPost(post);
-        translation.setTitle(requestDto.getTitle());
-        translation.setText(requestDto.getText());
-        translation.setLangCode(langCode);
-        translation.setShortText(truncateStringTo500Characters(requestDto.getText()));
-        return translation;
+    private PostTranslations createPostTranslation(Post post, BlogPostRequestDto requestDto, Language language) {
+        return PostTranslations.builder()
+                .post(post)
+                .title(requestDto.getTitle())
+                .text(requestDto.getText())
+                .language(language)
+                .shortText(truncateStringTo500Characters(requestDto.getText()))
+                .build();
     }
 
     private int getReadingMinutes(String text) {
@@ -173,13 +192,13 @@ public class PostServiceImpl implements PostService {
         PostTranslations translation = createPostTranslation(
                 post,
                 requestDto,
-                optionsService.getDefaultSiteLanguage().getLangCode());
+                optionsService.getDefaultSiteLanguage());
         postTranslations.add(translation);
 
         post.setUser(userService.findByUsername(authentication.getName()));
         post.setCategories(requestDto.getCategoriesIds().stream()
                 .map(categoryService::getBlogCategory)
-                .collect(Collectors.toList()));
+                .toList());
         post.setTranslations(postTranslations);
         post.setStatus(Post.Status.DRAFT);
         post.setReadingMinutes(getReadingMinutes(requestDto.getText()));
@@ -191,35 +210,33 @@ public class PostServiceImpl implements PostService {
         return languageService.getByLangCode(langCode).getLangCode();
     }
 
-    private List<Post> findAllByBlogCategoryId(Long categoryId) {
-        List<Post> posts = postRepository.findPostsByCategoryId(categoryId);
-        if (posts.isEmpty()) {
-            throw new ItemNotFoundException("Can't find posts for category: " + categoryId);
-        }
-        return posts;
+    private List<Post> findAllByBlogCategoryId(Long categoryId, Pageable pageable) {
+        return postRepository.findPostsByCategoryId(categoryId, pageable);
     }
 
     private List<BlogCategory> getFilteredCategories(Post post, String langCode) {
         return post.getCategories().stream()
-                .peek(category -> category.setTranslations(
-                        category.getTranslations().stream()
-                                .filter(c -> c.getLangCode().equals(checkedLang(langCode)))
-                                .collect(Collectors.toList())
-                ))
+                .map(category -> {
+                    List<CategoryTranslation> translations = category.getTranslations().stream()
+                            .filter(c -> c.getLanguage().getLangCode().equals(checkedLang(langCode)))
+                            .toList();
+                    category.setTranslations(translations);
+                    return category;
+                })
                 .filter(category -> !category.getTranslations().isEmpty())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private List<PostTranslations> getTranslation(Long postId, String langCode) {
         List<PostTranslations> translations = findById(postId).getTranslations().stream()
-                .filter(t -> t.getLangCode().equals(checkedLang(langCode)))
-                .collect(Collectors.toList());
+                .filter(t -> t.getLanguage().getLangCode().equals(checkedLang(langCode)))
+                .toList();
 
         if (translations.isEmpty()) {
             translations = findById(postId).getTranslations().stream()
-                    .filter(postTranslations -> postTranslations.getLangCode().equals(
+                    .filter(postTranslations -> postTranslations.getLanguage().getLangCode().equals(
                             optionsService.getDefaultSiteLanguage().getLangCode()))
-                    .collect(Collectors.toList());
+                    .toList();
         }
         return translations;
     }
